[metadata]
description = A python module implementing the RabbitMQ API
name = hopps
long_description = file: README.md
long_description_content_type = text/md
license = Apache License 2.0
license_file = LICENSE
url = https://github.com/itamadev/hopps
project_urls =
    Source = https://github.com/itamadev/hopps
download_url = https://github.com/itamadev/hopps
keywords = rabbitmq, rabbit, api, http, message-queue
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
zip_safe = False
packages = find:
include_package_data = True
# install_requires =

[options.packages.find]
exclude =
    hopps.testing
    hopps.testing.*
    tests
    tests.*
